# twat-mp

./: .coverage.Hamlet.local.24512.XMFtQONx.wgw3  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CHANGELOG.md  CLEANUP.txt  LICENSE  LOG.md  PLAN.md  README.md  REPO_CONTENT.txt  TODO.md  build.sh  cleanup.py  install.sh  llms.txt  publish.sh  pyproject.toml  twat_search.txt
.cursor/rules/: 0project.mdc  cleanup.mdc  filetree.mdc  quality.mdc
.github/workflows/: ci.yml  push.yml  release.yml
.specstory/history/: .what-is-this.md  2025-03-04_03-11-implementing-todo-md-plan.md  2025-03-04_03-23-codebase-analysis-and-todo-list-creation.md  2025-03-04_06-17-fixing-hatch-configuration-error.md  2025-03-04_07-16-implementing-todo-md-phases-1-and-2.md  2025-03-04_07-54-untitled.md  2025-03-04_07-59-project-maintenance-and-documentation-update.md  2025-03-04_08-26-ruff-linting-errors-and-fixes.md  2025-03-04_08-26-untitled.md
docs/: architecture.md
src/twat_mp/: __init__.py  __main__.py  async_mp.py  mp.py
src/twat_multi/: __init__.py  __main__.py
tests/: test_async_mp.py  test_benchmark.py  test_cli.py  test_package.py  test_twat_mp.py
