[build-system]
requires = [
    "hatchling>=1.21.0",
    "hatch-vcs>=0.3.0",
]
build-backend = "hatchling.build"


[project]
name = "twat-multi"
dynamic = ["version"]
description = "Parallel processing utilities using Pathos multiprocessing library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["parallel", "multiprocessing", "pathos", "map", "pool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "pathos>=0.3.0",
]


[[project.authors]]
name = "Adam Twardoch"
email = "adam+github@twardoch.com"


[project.urls]
Documentation = "https://github.com/twardoch/twat-multi#readme"
Issues = "https://github.com/twardoch/twat-multi/issues"
Source = "https://github.com/twardoch/twat-multi"


[project.entry-points."twat.plugins"]
multi = "twat_multi"

[tool.hatch.build.targets.wheel]
packages = ["src/twat_multi"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "src/twat_multi/__version__.py"



[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]


[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/twat_multi --cov=tests {args:tests}"
type-check = "mypy src/twat_multi tests"
lint = ["ruff check src/twat_multi tests", "ruff format src/twat_multi tests"]


[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]


[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.1.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]


[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/twat_multi tests}"
style = ["ruff check {args:.}", "ruff format {args:.}"]
fmt = ["ruff format {args:.}", "ruff check --fix {args:.}"]
all = ["style", "typing"]


[tool.black]
target-version = ["py38"]
line-length = 88
skip-string-normalization = true


[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "PLR0913",  # Too many arguments to function call
    "ISC001",   # Implicit string concatenation
]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]


[tool.coverage.run]
source_pkgs = ["twat_multi", "tests"]
branch = true
parallel = true
omit = [
    "src/twat_multi/__about__.py",
]


[tool.coverage.paths]
twat_multi = ["src/twat_multi", "*/twat-multi/src/twat_multi"]
tests = ["tests", "*/twat-multi/tests"]


[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
] 